--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "@laughingzhu/astro-link-preview",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This Astro integration generates preview images for external links.",
   "type": "module",
   "types": "./dist/index.d.ts",
-  "access": "public",
   "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.mjs"
-      }
-    },
-    "./route": "./dist/route.mjs"
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.mjs"
+    }
   },
   "engines": {
     "node": ">=16.0.0"
@@ -63,5 +59,8 @@
   "main": "index.js",
   "bugs": {
     "url": "https://github.com/LaughingZhu/astro-link-preview/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
